--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'com.savvasdalkitsis'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.2.10'
+    ext.kotlin_version = '1.2.21'
 
     repositories {
         mavenCentral()
@@ -23,7 +23,7 @@ repositories {
 
 dependencies {
     compile (
-        "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version",
+        "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version",
         "org.json:json:20180130",
     )
     testCompile (
