--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,10 @@ buildscript {
     ext.github_name = 'savvasdalkitsis'
 
     ext.project_name = 'json-merge'
-    ext.project_description = 'json-merge is a library for merging json files for the JVM'
+    ext.project_description = 'json-merge is a library for merging json files for the JVM written in Kotlin'
     ext.project_group = 'com.savvasdalkitsis'
     ext.project_artifact = 'json-merge'
-    ext.project_version = '0.0.2'
+    ext.project_version = '0.0.3'
     ext.project_license = 'The Apache Software License, Version 2.0'
     ext.project_license_tag = 'Apache-2.0'
     ext.project_license_url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
